# lod3_modeler

./: .gitattributes  .gitignore  README.md  patersonhall.py  pyproject.toml
config/: building_enrichment.json
docs/: carleton_proof_of_concept.md  halifax_geoflow_lod2.md  halifax_pointcloud_download.md
docs/context/: README.md  README.txt
flowcharts/: lod1_reconstruction_lala_shop.json  lod1_reconstruction_mary_queen.json  lod1_reconstruction_victorian.json  reconstruct.json
notebooks/: building_enrichment.ipynb
src/: visualize_cityjson.py
src/lod3_modeler/: __init__.py  building_parser.py  detection_parser.py  enrichment.py  halifax_pointcloud_loader.py  image_parser.py
